Apply fix to testIntegration
Signed-off-by: Kelly Greco <kelly@swirldslabs.com>